syntax = "proto3";
option cc_generic_services = true;


message addItemRequest {
    int32 price = 1;
    string goods = 2;
}

message addItemResponse {
    int32 ret_code = 1; // 业务错误码， 0: success, 1: fail
    string res_info = 2; // 业务错误信息
    string order_id = 3; 
}

message queryItemRequest {
    string order_id = 1;
}

message quertItemResponse {
    int32 ret_code = 1;
    string res_info = 2;
    string order_id = 3;
    int32 price = 4;
    string goods = 5;
}

service StoreService {
    rpc add_Item(addItemRequest) returns (addItemResponse);

    rpc query_order(queryItemRequest) returns (quertItemResponse);
}